# bowi

./: .gitignore  .python-version  CONTRIBUTING.md  Makefile  README.md  pyproject.toml  requirements.txt  setup.cfg
bowi/: chunk.py  weight.py
docs/: conf.py
docs/_templates/: badges.html  github.html  moreinfo.html
tests/test_example/: test_some_function.py
