[build-system]
requires = ["poetry>=1.0"]
build-backend = "poetry.masonry.api"


[tool.nitpick]
style = "https://raw.githubusercontent.com/wemake-services/wemake-python-styleguide/master/styles/nitpick-style-wemake.toml"


[tool.poetry]
name = "bowi"
version = "0.1.0"
description = "This is how python package should look like!"

authors = ["Wataru Hirota"]

readme = "README.md"

repository = "https://github.com/tarohi24/bowi"

keywords = []

classifiers = [
  "Development Status :: 3 - Alpha",
]

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]
mypy = "^0.770"

wemake-python-styleguide = "^0.14.0"
flake8-pytest-style = "^1.0"

pytest = "^5.4"
pytest-cov = "^2.7"
pytest-randomly = "^3.2"

tomlkit = "^0.5"
